--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>        
     </main>
 </body>
