--- a/youtube.html
+++ b/youtube.html
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        
-
-        img {
-            width: 100vh;
-
-        }
-        a {
-            display: block;
-            background-color: darkred;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-weight: bolder;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">    
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="Youtube">
