--- a/facebook.html
+++ b/facebook.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
-    <link rel="stylesheet" href="/estilos/social.css">
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="Facebook">
