--- a/github.html
+++ b/github.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
-    <link rel="stylesheet" href="/estilos/social.css">
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://gustavoguanabara.github.io" target="_blank">ACESSE</a>
+    <a href="https://github.com/BrunoSuzuki" target="_blank">ACESSE</a>
     
 </body>
 </html>
